Fixing vertical align in nav bar

--- a/style.css
+++ b/style.css
@@ -148,21 +148,20 @@ h1,h2,h3,h4,h5,h6 {
 	font-size:180%;
 }
 
-.PostDate{
-}
-
 #PageBody{
 	margin-top:20px;
 }
 
 #masthead-meta{
-	text-align:right
+	text-align:right;
+	padding: 4px;
 }
 
 #masthead-meta a{
 	color:white;
 	font-weight:bold;
 	padding: 5px;
+	vertical-align: middle;
 }
 
 #masthead { 
